[tool.poetry]
name = "advsber"
version = "0.1.0"
description = ""
authors = ["fursovia <fursov.ia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = "v1.1.0rc4"
allennlp_models = "v1.1.0rc4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
