[tool.poetry]
name = "advsber"
version = "0.1.0"
description = ""
authors = ["fursovia <fursov.ia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
allennlp = "v1.1.0rc4"
allennlp_models = "v1.1.0rc4"
python-Levenshtein = "^0.12.0"
jsonlines = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "5.3.1"
black = "^19.10b0"
mypy = "0.770"
flake8 = "^3.7.9"

[tool.black]
line-length = 115

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
